# niivue-binder

./: .codespellrc  .gitignore  .pre-commit-config.yaml  README.md  environment.yml  make_repo.sh  normalize_notebooks.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: binder-link.yml  ci.yml
.pre-commit-scripts/: export-environment.sh
images/: README.md
notebooks/: basic.ipynb  basic.mesh.ipynb  basic.mesh.stat.ipynb  basic.vox.connect.ipynb  basic.vox.mesh.ipynb  basic.vox.stat.ipynb  basic.vox.tract.ipynb  canvas.height.ipynb  canvas.size.ipynb  clipplanes.ipynb  connect.adv.ipynb  connect.ipynb  data_loading_formats.ipynb  dog.py  draw.ui.ipynb  draw2.ipynb  freesurfer.ipynb  from_url.ipynb  local.ipynb  mesh.atlas.suit.ipynb  mesh.colormaps.ipynb  mesh.formats.ipynb  mesh.layers.ipynb  mesh.matcap.ipynb  mesh.mosaic.ipynb  mesh.timeseries.ipynb  mesh.tradeoffs.ipynb  modulatescalar.ipynb  mosaic.ipynb  mosaic.timeseries.ipynb  mosaics1.ipynb  mosaics2.ipynb  on_event.ipynb  saving.ipynb  segment.ipynb  shaders.mesh.ipynb  shear.ipynb  stats.alphathreshold.ipynb  sync.bidirectional.ipynb  timeseries.ipynb  (+17 more)
scripts/: README.md
