[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "niivue-binder"
version = "0.1.0"
description = "Interactive visualization of medical images in Jupyter notebooks"
requires-python = ">=3.10"
dependencies = [
    # Core visualization
    "ipyniivue>=2.4.2",
    # Scientific computing (for notebooks)
    "nibabel",
    "scipy",
    "scikit-image",
    "matplotlib",
    # Notebook environment
    "notebook",
    "jupyterlab",
    "voila",
    "nbconvert",
]

[tool.setuptools]
py-modules = []  # No actual Python code, just dependencies

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.10"
# Dev tools (from conda)
notebook = "*"
jupyterlab = "*"
voila = "*"
nbconvert = "*"
pre-commit = "*"
# Core deps from conda (faster than pip)
nibabel = "*"
scipy = "*"
scikit-image = "*"
matplotlib = "*"

